accelerated-domains: add ydylcn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96607,6 +96607,7 @@ server=/ydxdg.xyz/114.114.114.114
 server=/ydxrf.com/114.114.114.114
 server=/ydxxt.com/114.114.114.114
 server=/ydyeducation.com/114.114.114.114
+server=/ydylcn.com/114.114.114.114
 server=/ydyljk.com/114.114.114.114
 server=/ydylmtytv.com/114.114.114.114
 server=/ydyspc.com/114.114.114.114
