--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88334,6 +88334,7 @@ server=/wc0122log.com/114.114.114.114
 server=/wc44.com/114.114.114.114
 server=/wcansoft.com/114.114.114.114
 server=/wcaos.com/114.114.114.114
+server=/wccbee.com/114.114.114.114
 server=/wcccc.cc/114.114.114.114
 server=/wcd.im/114.114.114.114
 server=/wcdfxj.xyz/114.114.114.114
