accelerated-domains: add skuking.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78273,6 +78273,7 @@ server=/skswz.com/114.114.114.114
 server=/sktcdn.com/114.114.114.114
 server=/sktecfibre.com/114.114.114.114
 server=/sktfaker.com/114.114.114.114
+server=/skuking.com/114.114.114.114
 server=/skusoft.com/114.114.114.114
 server=/skxox.com/114.114.114.114
 server=/skxsj.com/114.114.114.114
