accelerated-domains: add zlh-zh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103807,6 +103807,7 @@ server=/zlglpt.com/114.114.114.114
 server=/zlgmcu.com/114.114.114.114
 server=/zlgpy.com/114.114.114.114
 server=/zlgsj.com/114.114.114.114
+server=/zlh-zh.com/114.114.114.114
 server=/zlhome.com/114.114.114.114
 server=/zlhospital.com/114.114.114.114
 server=/zlhui.com/114.114.114.114
