--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1330,6 +1330,7 @@ server=/123pan.com/114.114.114.114
 server=/123panpay.com/114.114.114.114
 server=/123qibu.com/114.114.114.114
 server=/123qy.com/114.114.114.114
+server=/123shopee.com/114.114.114.114
 server=/123si.org/114.114.114.114
 server=/123slg.com/114.114.114.114
 server=/123ths.com/114.114.114.114
