--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28253,6 +28253,7 @@ server=/duokaiyun.com/114.114.114.114
 server=/duokan.com/114.114.114.114
 server=/duokan8.com/114.114.114.114
 server=/duokanbox.com/114.114.114.114
+server=/duoke.com/114.114.114.114
 server=/duoke.net/114.114.114.114
 server=/duokebao.net/114.114.114.114
 server=/duokebo.com/114.114.114.114
