--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4490,6 +4490,7 @@ server=/4lzr.com/114.114.114.114
 server=/4ndwc.com/114.114.114.114
 server=/4oz4n.icu/114.114.114.114
 server=/4paradigm.com/114.114.114.114
+server=/4pis.com/114.114.114.114
 server=/4pnt.com/114.114.114.114
 server=/4puio4.com/114.114.114.114
 server=/4px.com/114.114.114.114
