--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40099,6 +40099,7 @@ server=/haiwenky.com/114.114.114.114
 server=/haiwu.com/114.114.114.114
 server=/haixiachina.com/114.114.114.114
 server=/haixiahuagong.com/114.114.114.114
+server=/haixiangkuajing.com/114.114.114.114
 server=/haixianlai.net/114.114.114.114
 server=/haixin5.com/114.114.114.114
 server=/haixindichan.com/114.114.114.114
