accelerated-domains: add hebkjs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41447,6 +41447,7 @@ server=/hebisf.com/114.114.114.114
 server=/hebitv.com/114.114.114.114
 server=/hebiw.com/114.114.114.114
 server=/hebjxw.com/114.114.114.114
+server=/hebkjs.com/114.114.114.114
 server=/hebl.name/114.114.114.114
 server=/hebmusic.com/114.114.114.114
 server=/hebngc.com/114.114.114.114
