--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92272,6 +92272,7 @@ server=/xh456.com/114.114.114.114
 server=/xhaiwai.com/114.114.114.114
 server=/xhante.com/114.114.114.114
 server=/xhay1122.com/114.114.114.114
+server=/xhbaoguan.net/114.114.114.114
 server=/xhblog.com/114.114.114.114
 server=/xhboke.com/114.114.114.114
 server=/xhbosn.com/114.114.114.114
