--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102423,6 +102423,7 @@ server=/zhongdengwang.com/114.114.114.114
 server=/zhongdi168.com/114.114.114.114
 server=/zhongerp.com/114.114.114.114
 server=/zhongfanxinrong.com/114.114.114.114
+server=/zhongfeiqiao.com/114.114.114.114
 server=/zhongfu.net/114.114.114.114
 server=/zhongfuwatch.com/114.114.114.114
 server=/zhongguinong.com/114.114.114.114
