--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22227,6 +22227,7 @@ server=/cnetec.com/114.114.114.114
 server=/cnetsec.com/114.114.114.114
 server=/cnevi.com/114.114.114.114
 server=/cnexp.net/114.114.114.114
+server=/cnexpo.com/114.114.114.114
 server=/cnexps.com/114.114.114.114
 server=/cneyoo.com/114.114.114.114
 server=/cnezsoft.com/114.114.114.114
