accelerated-domains: add nbzsq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64026,6 +64026,7 @@ server=/nbyeda.com/114.114.114.114
 server=/nbyjrf.com/114.114.114.114
 server=/nbyouth.com/114.114.114.114
 server=/nbyyz.com/114.114.114.114
+server=/nbzsq.com/114.114.114.114
 server=/nbztfx.com/114.114.114.114
 server=/nbzxgj.com/114.114.114.114
 server=/nbzyenergy.com/114.114.114.114
