accelerated-domains: add txvat.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85253,6 +85253,7 @@ server=/txtshuku.org/114.114.114.114
 server=/txttgj.com/114.114.114.114
 server=/txttool.com/114.114.114.114
 server=/txtxr.com/114.114.114.114
+server=/txvat.com/114.114.114.114
 server=/txvlog.com/114.114.114.114
 server=/txwb.com/114.114.114.114
 server=/txweekly.com/114.114.114.114
