--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39142,6 +39142,7 @@ server=/gybsn.com/114.114.114.114
 server=/gybyscy.com/114.114.114.114
 server=/gybyxsy1588.com/114.114.114.114
 server=/gycfst.com/114.114.114.114
+server=/gycharm.com/114.114.114.114
 server=/gycode.com/114.114.114.114
 server=/gydfsy.com/114.114.114.114
 server=/gydongli.com/114.114.114.114
