--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30586,6 +30586,7 @@ server=/expiredns.net/114.114.114.114
 server=/expirenotification.com/114.114.114.114
 server=/expirepausedns.com/114.114.114.114
 server=/expku.com/114.114.114.114
+server=/explinks.com/114.114.114.114
 server=/expodmc.com/114.114.114.114
 server=/expoeye.net/114.114.114.114
 server=/expohsp.com/114.114.114.114
