accelerated-domains: add szicbe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81213,6 +81213,7 @@ server=/szhytrip.com/114.114.114.114
 server=/szhzsd.com/114.114.114.114
 server=/szhzzl.com/114.114.114.114
 server=/szhzzy.com/114.114.114.114
+server=/szicbe.com/114.114.114.114
 server=/szicc.net/114.114.114.114
 server=/szider.com/114.114.114.114
 server=/szihl-port.com/114.114.114.114
