--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89278,6 +89278,7 @@ server=/wezhibo.net/114.114.114.114
 server=/wezhibo.tv/114.114.114.114
 server=/wezhicms.com/114.114.114.114
 server=/wezhuiyi.com/114.114.114.114
+server=/wezonet.com/114.114.114.114
 server=/wf.pub/114.114.114.114
 server=/wf163.com/114.114.114.114
 server=/wf66.com/114.114.114.114
