--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25721,6 +25721,7 @@ server=/deadnine.com/114.114.114.114
 server=/deafchina.com/114.114.114.114
 server=/deahu.com/114.114.114.114
 server=/dealsbank.com/114.114.114.114
+server=/dealshuo.com/114.114.114.114
 server=/dealsmake.com/114.114.114.114
 server=/deansys.com/114.114.114.114
 server=/dear520dear.com/114.114.114.114
