--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20406,6 +20406,7 @@ server=/chinarun.com/114.114.114.114
 server=/chinarzfh.com/114.114.114.114
 server=/chinasaat.com/114.114.114.114
 server=/chinasafety.net/114.114.114.114
+server=/chinasalestore.com/114.114.114.114
 server=/chinasanc.com/114.114.114.114
 server=/chinasantian.com/114.114.114.114
 server=/chinasareview.com/114.114.114.114
