--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80476,6 +80476,7 @@ server=/swat-js.com/114.114.114.114
 server=/swatou.com/114.114.114.114
 server=/swbbsc.com/114.114.114.114
 server=/swc-china.com/114.114.114.114
+server=/swceb.com/114.114.114.114
 server=/swchina.org/114.114.114.114
 server=/sweet-data.com/114.114.114.114
 server=/sweetalkos.com/114.114.114.114
