--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90176,6 +90176,7 @@ server=/wlmqwb.com/114.114.114.114
 server=/wlmqxht.com/114.114.114.114
 server=/wlnh.net/114.114.114.114
 server=/wlnmp.com/114.114.114.114
+server=/wlol.com/114.114.114.114
 server=/wlouqsz.xyz/114.114.114.114
 server=/wlphp.com/114.114.114.114
 server=/wlplove.com/114.114.114.114
