--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27968,6 +27968,7 @@ server=/drvi.net/114.114.114.114
 server=/drvsky.com/114.114.114.114
 server=/drxexpo.com/114.114.114.114
 server=/drxrc.com/114.114.114.114
+server=/ds-lg.com/114.114.114.114
 server=/ds028.com/114.114.114.114
 server=/ds123456.com/114.114.114.114
 server=/ds5f.com/114.114.114.114
