accelerated-domains: add hengtonglog.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41784,6 +41784,7 @@ server=/hengtianyun.com/114.114.114.114
 server=/hengtong-sd.com/114.114.114.114
 server=/hengtonggroup.com/114.114.114.114
 server=/hengtongjuice-usa.com/114.114.114.114
+server=/hengtonglog.com/114.114.114.114
 server=/hengxiangtaji.com/114.114.114.114
 server=/hengxinjinshu.com/114.114.114.114
 server=/hengxinyongli.com/114.114.114.114
