--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65996,6 +65996,7 @@ server=/npp-battery.com/114.114.114.114
 server=/npp.cc/114.114.114.114
 server=/nprc.net/114.114.114.114
 server=/npsdyyy.com/114.114.114.114
+server=/npsel.com/114.114.114.114
 server=/nptpark.com/114.114.114.114
 server=/nptwedding.com/114.114.114.114
 server=/npub.net/114.114.114.114
