accelerated-domains: add yujiawuliu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99639,6 +99639,7 @@ server=/yujia.com/114.114.114.114
 server=/yujiahui.com/114.114.114.114
 server=/yujianai520.com/114.114.114.114
 server=/yujianpay.com/114.114.114.114
+server=/yujiawuliu.com/114.114.114.114
 server=/yujiefs.com/114.114.114.114
 server=/yujifruit.com/114.114.114.114
 server=/yujingkj.com/114.114.114.114
