accelerated-domains: add 4portun.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4492,6 +4492,7 @@ server=/4oz4n.icu/114.114.114.114
 server=/4paradigm.com/114.114.114.114
 server=/4pis.com/114.114.114.114
 server=/4pnt.com/114.114.114.114
+server=/4portun.com/114.114.114.114
 server=/4puio4.com/114.114.114.114
 server=/4px.com/114.114.114.114
 server=/4pyun.com/114.114.114.114
