--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24145,6 +24145,7 @@ server=/ctsscs.com/114.114.114.114
 server=/ctsto.com/114.114.114.114
 server=/ctszh.com/114.114.114.114
 server=/cttip.org/114.114.114.114
+server=/cttms.com/114.114.114.114
 server=/cttq.com/114.114.114.114
 server=/cttsd.com/114.114.114.114
 server=/cttv.co/114.114.114.114
