--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29633,6 +29633,7 @@ server=/eismowe.com/114.114.114.114
 server=/eisoo.com/114.114.114.114
 server=/ej-travel.com/114.114.114.114
 server=/ejamad.com/114.114.114.114
+server=/ejc56.com/114.114.114.114
 server=/ejcms.com/114.114.114.114
 server=/ejcop.com/114.114.114.114
 server=/ejdrone.com/114.114.114.114
