--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42254,6 +42254,7 @@ server=/hic.cloud/114.114.114.114
 server=/hicamelia.com/114.114.114.114
 server=/hiccupx.xyz/114.114.114.114
 server=/hiceon.com/114.114.114.114
+server=/hichain.com/114.114.114.114
 server=/hicheng.net/114.114.114.114
 server=/hichina.com/114.114.114.114
 server=/hichina.net/114.114.114.114
