accelerated-domains: add rycc.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73860,6 +73860,7 @@ server=/rybbaby.com/114.114.114.114
 server=/rybridge.com/114.114.114.114
 server=/rybyurom.com/114.114.114.114
 server=/ryc360.com/114.114.114.114
+server=/rycc.net/114.114.114.114
 server=/rydbatt.com/114.114.114.114
 server=/rydermedical.com/114.114.114.114
 server=/rydth5.com/114.114.114.114
