accelerated-domains: add wwlcargo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91251,6 +91251,7 @@ server=/wwfchina.org/114.114.114.114
 server=/wwhlian.com/114.114.114.114
 server=/wwjia.com/114.114.114.114
 server=/wwjie.com/114.114.114.114
+server=/wwlcargo.com/114.114.114.114
 server=/wwmhdq.com/114.114.114.114
 server=/wwnet.vip/114.114.114.114
 server=/wwrcw.net/114.114.114.114
