--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52515,6 +52515,7 @@ server=/jumpstar-tech.com/114.114.114.114
 server=/jumpw.com/114.114.114.114
 server=/jumpwgame.com/114.114.114.114
 server=/jumpwo.com/114.114.114.114
+server=/jumsz.com/114.114.114.114
 server=/jumwayholdings.com/114.114.114.114
 server=/jun-hai.com/114.114.114.114
 server=/jun.la/114.114.114.114
