--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41549,6 +41549,7 @@ server=/heibaimeng.com/114.114.114.114
 server=/heibandongcha.com/114.114.114.114
 server=/heibanwa.mobi/114.114.114.114
 server=/heibaow.com/114.114.114.114
+server=/heibaowuliu.com/114.114.114.114
 server=/heicha.com/114.114.114.114
 server=/heicheng51.com/114.114.114.114
 server=/heidaren.com/114.114.114.114
