--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42891,6 +42891,7 @@ server=/hncourt.org/114.114.114.114
 server=/hncreate.com/114.114.114.114
 server=/hncsmtr.com/114.114.114.114
 server=/hncsvod.com/114.114.114.114
+server=/hnct56.com/114.114.114.114
 server=/hncxwater.com/114.114.114.114
 server=/hncytxly.com/114.114.114.114
 server=/hndbsp.com/114.114.114.114
