accelerated-domains: add sxhhwl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80628,6 +80628,7 @@ server=/sxgsps.com/114.114.114.114
 server=/sxgwyw.org/114.114.114.114
 server=/sxhbjt.com/114.114.114.114
 server=/sxhbjtshj.com/114.114.114.114
+server=/sxhhwl.com/114.114.114.114
 server=/sxhhyy.com/114.114.114.114
 server=/sxhimalayanqd.com/114.114.114.114
 server=/sxhiway.com/114.114.114.114
