--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63307,6 +63307,7 @@ server=/mydeershow.com/114.114.114.114
 server=/mydf.net/114.114.114.114
 server=/mydical.com/114.114.114.114
 server=/mydict.org/114.114.114.114
+server=/mydidadi.com/114.114.114.114
 server=/mydigi.net/114.114.114.114
 server=/mydigit.net/114.114.114.114
 server=/mydigitex.com/114.114.114.114
