accelerated-domains: add hnswljt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43073,6 +43073,7 @@ server=/hnssyxx.com/114.114.114.114
 server=/hnst.org/114.114.114.114
 server=/hnstandards.com/114.114.114.114
 server=/hnstguolu.net/114.114.114.114
+server=/hnswljt.com/114.114.114.114
 server=/hnswsjy.com/114.114.114.114
 server=/hnsxnet.com/114.114.114.114
 server=/hnsyda.com/114.114.114.114
