--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45945,6 +45945,7 @@ server=/hzsgjj.com/114.114.114.114
 server=/hzsh666.com/114.114.114.114
 server=/hzshanjie.com/114.114.114.114
 server=/hzshantai.com/114.114.114.114
+server=/hzshengjia.com/114.114.114.114
 server=/hzshudian.com/114.114.114.114
 server=/hzslgzx.com/114.114.114.114
 server=/hzsmbio.com/114.114.114.114
