accelerated-domains: add jlwlw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51347,6 +51347,7 @@ server=/jltchina.com/114.114.114.114
 server=/jltrq.com/114.114.114.114
 server=/jltyjxzz.com/114.114.114.114
 server=/jlwater.com/114.114.114.114
+server=/jlwlw.com/114.114.114.114
 server=/jlxfw.com/114.114.114.114
 server=/jlxhyy.com/114.114.114.114
 server=/jlxtxny.com/114.114.114.114
