--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58371,6 +58371,7 @@ server=/longlinyougou.com/114.114.114.114
 server=/longluo.me/114.114.114.114
 server=/longmaosoft.com/114.114.114.114
 server=/longmarchspace.com/114.114.114.114
+server=/longmaywuliu.com/114.114.114.114
 server=/longmeng.com/114.114.114.114
 server=/longming.com/114.114.114.114
 server=/longnanke.com/114.114.114.114
