--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67356,6 +67356,7 @@ server=/ourjg.com/114.114.114.114
 server=/ourjiangsu.com/114.114.114.114
 server=/ourjs.com/114.114.114.114
 server=/ourjz.com/114.114.114.114
+server=/ourleadchina.com/114.114.114.114
 server=/ourlife365.com/114.114.114.114
 server=/ourltc.com/114.114.114.114
 server=/ourmate.net/114.114.114.114
