--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74776,6 +74776,7 @@ server=/scwlylqx.com/114.114.114.114
 server=/scwmwl.com/114.114.114.114
 server=/scwy.net/114.114.114.114
 server=/scwyzx.com/114.114.114.114
+server=/scxd56.net/114.114.114.114
 server=/scxdf.com/114.114.114.114
 server=/scxinhe.com/114.114.114.114
 server=/scxinkang.com/114.114.114.114
