--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82275,6 +82275,7 @@ server=/tclclouds.com/114.114.114.114
 server=/tcljd.com/114.114.114.114
 server=/tclking.com/114.114.114.114
 server=/tclkqn.com/114.114.114.114
+server=/tclogx.com/114.114.114.114
 server=/tcloud19.com/114.114.114.114
 server=/tcloudbase.com/114.114.114.114
 server=/tcloudbase.net/114.114.114.114
