accelerated-domains: add ubuylogi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85566,6 +85566,7 @@ server=/ubtrobot.com/114.114.114.114
 server=/ubuant.com/114.114.114.114
 server=/ubuntukylin.com/114.114.114.114
 server=/ubuuk.com/114.114.114.114
+server=/ubuylogi.com/114.114.114.114
 server=/uc-union.com/114.114.114.114
 server=/uc003.com/114.114.114.114
 server=/uc108.com/114.114.114.114
