accelerated-domains: add tengdawl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82600,6 +82600,7 @@ server=/tengbo.cc/114.114.114.114
 server=/tengchangjiancai.com/114.114.114.114
 server=/tengchu.com/114.114.114.114
 server=/tengdatumu.com/114.114.114.114
+server=/tengdawl.com/114.114.114.114
 server=/tengdazuche.com/114.114.114.114
 server=/tengen.com/114.114.114.114
 server=/tengfang.net/114.114.114.114
