--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22004,6 +22004,7 @@ server=/cn0851.com/114.114.114.114
 server=/cn0917.com/114.114.114.114
 server=/cn11185.com/114.114.114.114
 server=/cn12365.org/114.114.114.114
+server=/cn156.com/114.114.114.114
 server=/cn168.com/114.114.114.114
 server=/cn18k.com/114.114.114.114
 server=/cn2030.com/114.114.114.114
