accelerated-domains: add manco-logistics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60122,6 +60122,7 @@ server=/manamana.net/114.114.114.114
 server=/manben.com/114.114.114.114
 server=/manboker.com/114.114.114.114
 server=/manchengpiaoxiang.com/114.114.114.114
+server=/manco-logistics.com/114.114.114.114
 server=/manction.com/114.114.114.114
 server=/mandao-tech.com/114.114.114.114
 server=/mandaow.com/114.114.114.114
