--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79033,6 +79033,7 @@ server=/sonoschina.com/114.114.114.114
 server=/sontan.net/114.114.114.114
 server=/sonyong.com/114.114.114.114
 server=/sonyselect.net/114.114.114.114
+server=/soo56.com/114.114.114.114
 server=/sooal.com/114.114.114.114
 server=/sooauto.com/114.114.114.114
 server=/soocang.com/114.114.114.114
