accelerated-domains: add sxcgzh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80600,6 +80600,7 @@ server=/sxbychem.com/114.114.114.114
 server=/sxcahosp.com/114.114.114.114
 server=/sxccb.com/114.114.114.114
 server=/sxcd-gyl.com/114.114.114.114
+server=/sxcgzh.com/114.114.114.114
 server=/sxchangshengjt.com/114.114.114.114
 server=/sxcig.com/114.114.114.114
 server=/sxcits.com/114.114.114.114
