accelerated-domains: add sxs56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80710,6 +80710,7 @@ server=/sxrmxwk.com/114.114.114.114
 server=/sxrqrlxh.com/114.114.114.114
 server=/sxrszdh.com/114.114.114.114
 server=/sxrtv.com/114.114.114.114
+server=/sxs56.com/114.114.114.114
 server=/sxsapi.com/114.114.114.114
 server=/sxsfdxylsyzx.com/114.114.114.114
 server=/sxsfyyy.com/114.114.114.114
