accelerated-domains: add gaishichina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33502,6 +33502,7 @@ server=/gainifyads.com/114.114.114.114
 server=/gainscha.com/114.114.114.114
 server=/gairuo.com/114.114.114.114
 server=/gaisen.ltd/114.114.114.114
+server=/gaishichina.com/114.114.114.114
 server=/gaitu.com/114.114.114.114
 server=/gaituba.com/114.114.114.114
 server=/gaitubao.com/114.114.114.114
