accelerated-domains: add hletong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42703,6 +42703,7 @@ server=/hldjz8.com/114.114.114.114
 server=/hldmzg.com/114.114.114.114
 server=/hldnews.com/114.114.114.114
 server=/hlej.com/114.114.114.114
+server=/hletong.com/114.114.114.114
 server=/hlexp.com/114.114.114.114
 server=/hlgad.com/114.114.114.114
 server=/hlgcj.com/114.114.114.114
