accelerated-domains: add jtexpress.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52315,6 +52315,7 @@ server=/jtamc.com/114.114.114.114
 server=/jtbole.com/114.114.114.114
 server=/jtbtech.com/114.114.114.114
 server=/jtcjd.com/114.114.114.114
+server=/jtexpress.com/114.114.114.114
 server=/jtfcg.com/114.114.114.114
 server=/jtfengtou.com/114.114.114.114
 server=/jtggame.com/114.114.114.114
