accelerated-domains: add safround.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74009,6 +74009,7 @@ server=/safenext.com/114.114.114.114
 server=/safetyimg.com/114.114.114.114
 server=/safetystatic.com/114.114.114.114
 server=/safetyvod.com/114.114.114.114
+server=/safround.com/114.114.114.114
 server=/sagetrc.com/114.114.114.114
 server=/sagigame.net/114.114.114.114
 server=/sagw.com/114.114.114.114
