accelerated-domains: add xd56b.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92073,6 +92073,7 @@ server=/xd.com/114.114.114.114
 server=/xd0.co/114.114.114.114
 server=/xd0.com/114.114.114.114
 server=/xd0731.com/114.114.114.114
+server=/xd56b.com/114.114.114.114
 server=/xd57.com/114.114.114.114
 server=/xd79.com/114.114.114.114
 server=/xd8888.net/114.114.114.114
