--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86982,6 +86982,7 @@ server=/viigee.com/114.114.114.114
 server=/viisan.com/114.114.114.114
 server=/viitalk.com/114.114.114.114
 server=/viixin.com/114.114.114.114
+server=/vijingsmart.com/114.114.114.114
 server=/vijos.org/114.114.114.114
 server=/vikduo.com/114.114.114.114
 server=/vikecn.com/114.114.114.114
