--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98026,6 +98026,7 @@ server=/yjzcalzcxm.com/114.114.114.114
 server=/yjzf.com/114.114.114.114
 server=/yk-bio.com/114.114.114.114
 server=/yk211.com/114.114.114.114
+server=/yk56.com/114.114.114.114
 server=/ykai.com/114.114.114.114
 server=/ykccn.com/114.114.114.114
 server=/ykcer.com/114.114.114.114
