--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99802,6 +99802,7 @@ server=/yunda56.com/114.114.114.114
 server=/yundaex.com/114.114.114.114
 server=/yundagongyi.com/114.114.114.114
 server=/yundangan.com/114.114.114.114
+server=/yundaomen.com/114.114.114.114
 server=/yundaowx.com/114.114.114.114
 server=/yundasys.com/114.114.114.114
 server=/yunde.net/114.114.114.114
