accelerated-domains: add rtsaas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73561,6 +73561,7 @@ server=/rtmobi.cc/114.114.114.114
 server=/rtranquill.com/114.114.114.114
 server=/rtroytj33.fun/114.114.114.114
 server=/rtrrx.com/114.114.114.114
+server=/rtsaas.com/114.114.114.114
 server=/rtsac.org/114.114.114.114
 server=/rtsc-gift.com/114.114.114.114
 server=/rtxapp.com/114.114.114.114
