--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -6147,6 +6147,7 @@ server=/5idhl.com/114.114.114.114
 server=/5idream.net/114.114.114.114
 server=/5iec.com/114.114.114.114
 server=/5iecity.com/114.114.114.114
+server=/5iexpress.com/114.114.114.114
 server=/5ifapiao.com/114.114.114.114
 server=/5ifit.com/114.114.114.114
 server=/5iflying.com/114.114.114.114
