--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19717,6 +19717,7 @@ server=/china-bluestar.com/114.114.114.114
 server=/china-bme.com/114.114.114.114
 server=/china-caa.org/114.114.114.114
 server=/china-caihua.com/114.114.114.114
+server=/china-cale.com/114.114.114.114
 server=/china-capsule.com/114.114.114.114
 server=/china-cas.org/114.114.114.114
 server=/china-cba.net/114.114.114.114
