accelerated-domains: add chinaghwl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20138,6 +20138,7 @@ server=/chinagayles.com/114.114.114.114
 server=/chinagb.net/114.114.114.114
 server=/chinagb.org/114.114.114.114
 server=/chinagba.com/114.114.114.114
+server=/chinaghwl.com/114.114.114.114
 server=/chinagiftsfair.com/114.114.114.114
 server=/chinaglassnet.com/114.114.114.114
 server=/chinagoldcoin.net/114.114.114.114
