--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21700,6 +21700,7 @@ server=/cloudpnr.com/114.114.114.114
 server=/cloudquanzhou.com/114.114.114.114
 server=/cloudrmt.com/114.114.114.114
 server=/cloudroom.com/114.114.114.114
+server=/clouds1000.com/114.114.114.114
 server=/cloudsanya.com/114.114.114.114
 server=/cloudsation.com/114.114.114.114
 server=/cloudsee.com/114.114.114.114
