accelerated-domains: add fb56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31271,6 +31271,7 @@ server=/fayunla.com/114.114.114.114
 server=/fazhijx.com/114.114.114.114
 server=/fazz.fun/114.114.114.114
 server=/fb.mu/114.114.114.114
+server=/fb56.com/114.114.114.114
 server=/fbaichuan.com/114.114.114.114
 server=/fbank.com/114.114.114.114
 server=/fbaot.com/114.114.114.114
