--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10558,6 +10558,7 @@ server=/alanyhq.com/114.114.114.114
 server=/alavr.com/114.114.114.114
 server=/alayanew.com/114.114.114.114
 server=/alayu.com/114.114.114.114
+server=/alayunchina.com/114.114.114.114
 server=/alazv.com/114.114.114.114
 server=/albeche.com/114.114.114.114
 server=/albertaz.com/114.114.114.114
