accelerated-domains: add kqgyl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54697,6 +54697,7 @@ server=/kq88.com/114.114.114.114
 server=/kqalevel.com/114.114.114.114
 server=/kqapi.com/114.114.114.114
 server=/kqgeo.com/114.114.114.114
+server=/kqgyl.com/114.114.114.114
 server=/kqiaq.com/114.114.114.114
 server=/kqidong.com/114.114.114.114
 server=/kqj123.com/114.114.114.114
