accelerated-domains: add sf-freight.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75465,6 +75465,7 @@ server=/sf-cityrush.com/114.114.114.114
 server=/sf-dsc.com/114.114.114.114
 server=/sf-express.com/114.114.114.114
 server=/sf-financial.com/114.114.114.114
+server=/sf-freight.com/114.114.114.114
 server=/sf-international.com/114.114.114.114
 server=/sf-intra-city.com/114.114.114.114
 server=/sf-jf.com/114.114.114.114
