--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77262,6 +77262,7 @@ server=/shuchongread.com/114.114.114.114
 server=/shuchuandata.com/114.114.114.114
 server=/shucong.com/114.114.114.114
 server=/shudaojt.com/114.114.114.114
+server=/shudaowl.com/114.114.114.114
 server=/shudaxia.com/114.114.114.114
 server=/shudc.com/114.114.114.114
 server=/shudianwang.com/114.114.114.114
