--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80911,6 +80911,7 @@ server=/syounggroup.com/114.114.114.114
 server=/sypglass.com/114.114.114.114
 server=/sypole.com/114.114.114.114
 server=/sypost.com/114.114.114.114
+server=/sypost.net/114.114.114.114
 server=/sypvm.com/114.114.114.114
 server=/syq666.com/114.114.114.114
 server=/syr-sce.com/114.114.114.114
