--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88487,6 +88487,7 @@ server=/wdyxgames.com/114.114.114.114
 server=/wdyy.com/114.114.114.114
 server=/wdzj.com/114.114.114.114
 server=/wdzx.com/114.114.114.114
+server=/we-canlogistics.com/114.114.114.114
 server=/we.com/114.114.114.114
 server=/we.dji.com/114.114.114.114
 server=/we1130.com/114.114.114.114
