--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90285,6 +90285,7 @@ server=/wmjygg.net/114.114.114.114
 server=/wmjyqd.net/114.114.114.114
 server=/wmjyszba.com/114.114.114.114
 server=/wmksj.com/114.114.114.114
+server=/wmlip.com/114.114.114.114
 server=/wmlunwen.com/114.114.114.114
 server=/wmnd.net/114.114.114.114
 server=/wmnetwork.cc/114.114.114.114
