--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91122,6 +91122,7 @@ server=/wulingauto.com/114.114.114.114
 server=/wulingnev.com/114.114.114.114
 server=/wulinn.com/114.114.114.114
 server=/wuliok.com/114.114.114.114
+server=/wuliucat.com/114.114.114.114
 server=/wuliuhangye.com/114.114.114.114
 server=/wuliujie.com/114.114.114.114
 server=/wuliuren.com/114.114.114.114
