accelerated-domains: add zhongchewuliu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102481,6 +102481,7 @@ server=/zhongcaitong.net/114.114.114.114
 server=/zhongcetech.com/114.114.114.114
 server=/zhongche.com/114.114.114.114
 server=/zhongchebaolian.com/114.114.114.114
+server=/zhongchewuliu.com/114.114.114.114
 server=/zhongchoujia.com/114.114.114.114
 server=/zhongchouke.com/114.114.114.114
 server=/zhongchouyan.com/114.114.114.114
