--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43124,6 +43124,7 @@ server=/hnwdhk.com/114.114.114.114
 server=/hnwisecom.com/114.114.114.114
 server=/hnwlcm.com/114.114.114.114
 server=/hnwlxh.net/114.114.114.114
+server=/hnwlycg.com/114.114.114.114
 server=/hnwngp.com/114.114.114.114
 server=/hnwsbz.com/114.114.114.114
 server=/hnwtv.com/114.114.114.114
