accelerated-domains: add jlfba.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51301,6 +51301,7 @@ server=/jlcops.com/114.114.114.114
 server=/jlcsj.com/114.114.114.114
 server=/jlcsmt.com/114.114.114.114
 server=/jldjam.com/114.114.114.114
+server=/jlfba.com/114.114.114.114
 server=/jlfjz.com/114.114.114.114
 server=/jlg66.com/114.114.114.114
 server=/jlgf.com/114.114.114.114
