accelerated-domains: add 56bid.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5803,6 +5803,7 @@ server=/5698415.com/114.114.114.114
 server=/56a.com/114.114.114.114
 server=/56ads.com/114.114.114.114
 server=/56beijing.org/114.114.114.114
+server=/56bid.com/114.114.114.114
 server=/56c.co/114.114.114.114
 server=/56care.com/114.114.114.114
 server=/56che.com/114.114.114.114
