--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23448,6 +23448,7 @@ server=/cqglcj.com/114.114.114.114
 server=/cqgmfw.com/114.114.114.114
 server=/cqgnhg.com/114.114.114.114
 server=/cqgwy.org/114.114.114.114
+server=/cqgyzone.com/114.114.114.114
 server=/cqgz.com/114.114.114.114
 server=/cqh2o.com/114.114.114.114
 server=/cqhansa.com/114.114.114.114
