accelerated-domains: add dfwl.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26128,6 +26128,7 @@ server=/dftq.net/114.114.114.114
 server=/dftyyls.com/114.114.114.114
 server=/dftzcgs.com/114.114.114.114
 server=/dftzj.com/114.114.114.114
+server=/dfwl.net/114.114.114.114
 server=/dfxq.com/114.114.114.114
 server=/dfxqc.com/114.114.114.114
 server=/dfxs1.com/114.114.114.114
