accelerated-domains: add huandonglg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44333,6 +44333,7 @@ server=/huanbeieloan.com/114.114.114.114
 server=/huanbeiloan.com/114.114.114.114
 server=/huancaicp.com/114.114.114.114
 server=/huandie.com/114.114.114.114
+server=/huandonglg.com/114.114.114.114
 server=/huane.net/114.114.114.114
 server=/huanergy.com/114.114.114.114
 server=/huang-biao.com/114.114.114.114
