--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80203,6 +80203,7 @@ server=/suningholdings.com/114.114.114.114
 server=/suningmail.com/114.114.114.114
 server=/suningpay.com/114.114.114.114
 server=/suningyunyou.com/114.114.114.114
+server=/sunjex.com/114.114.114.114
 server=/sunjiadai.xyz/114.114.114.114
 server=/sunjianjian.com/114.114.114.114
 server=/sunjs.com/114.114.114.114
