accelerated-domains: add casia.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17764,6 +17764,7 @@ server=/cashbackok.com/114.114.114.114
 server=/cashcatads.com/114.114.114.114
 server=/cashtoutiao.com/114.114.114.114
 server=/cashwaytech.com/114.114.114.114
+server=/casia.com/114.114.114.114
 server=/casibase.com/114.114.114.114
 server=/casic-addsino.com/114.114.114.114
 server=/casic-t.com/114.114.114.114
