--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34535,6 +34535,7 @@ server=/genshuixue.com/114.114.114.114
 server=/genstars.com/114.114.114.114
 server=/gentags.com/114.114.114.114
 server=/gentags.net/114.114.114.114
+server=/gentco.com/114.114.114.114
 server=/gentlemanbadass.com/114.114.114.114
 server=/genuway.com/114.114.114.114
 server=/geo-compass.com/114.114.114.114
