accelerated-domains: add shippingwhale.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76732,6 +76732,7 @@ server=/shipinzhibojian.com/114.114.114.114
 server=/shipoe.com/114.114.114.114
 server=/shippingate.com/114.114.114.114
 server=/shippingchina.com/114.114.114.114
+server=/shippingwhale.com/114.114.114.114
 server=/shipry.com/114.114.114.114
 server=/ships66.com/114.114.114.114
 server=/shipsc.org/114.114.114.114
