accelerated-domains: add wgl-group.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89403,6 +89403,7 @@ server=/wghostk.com/114.114.114.114
 server=/wghpdi.com/114.114.114.114
 server=/wgimg.com/114.114.114.114
 server=/wgkj.fun/114.114.114.114
+server=/wgl-group.com/114.114.114.114
 server=/wglh.com/114.114.114.114
 server=/wglm.net/114.114.114.114
 server=/wgm66.com/114.114.114.114
