--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98542,6 +98542,7 @@ server=/yongshenghn.com/114.114.114.114
 server=/yongshikj.com/114.114.114.114
 server=/yongsy.com/114.114.114.114
 server=/yongtaitech.com/114.114.114.114
+server=/yongtaiyun.com/114.114.114.114
 server=/yongtu.net/114.114.114.114
 server=/yongwangcpa.com/114.114.114.114
 server=/yongxiang.work/114.114.114.114
