accelerated-domains: add xdyanbao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92180,6 +92180,7 @@ server=/xdxdsz.com/114.114.114.114
 server=/xdxialingying.com/114.114.114.114
 server=/xdxiaoshuo.com/114.114.114.114
 server=/xdxmwang.com/114.114.114.114
+server=/xdyanbao.com/114.114.114.114
 server=/xdyjt.com/114.114.114.114
 server=/xdystar.com/114.114.114.114
 server=/xdyszx.com/114.114.114.114
