accelerated-domains: add cjspd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21418,6 +21418,7 @@ server=/cjsgegs.com/114.114.114.114
 server=/cjshipin.net/114.114.114.114
 server=/cjsic.com/114.114.114.114
 server=/cjslcg.com/114.114.114.114
+server=/cjspd.com/114.114.114.114
 server=/cjsy.net/114.114.114.114
 server=/cjsyedu.com/114.114.114.114
 server=/cjtl.com/114.114.114.114
