accelerated-domains: add changjiulogistics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19145,6 +19145,7 @@ server=/changjiangjin.com/114.114.114.114
 server=/changjiangtimes.com/114.114.114.114
 server=/changjianxy.com/114.114.114.114
 server=/changjingtong.com/114.114.114.114
+server=/changjiulogistics.com/114.114.114.114
 server=/changker.com/114.114.114.114
 server=/changkezhe.com/114.114.114.114
 server=/changlihui.com/114.114.114.114
