accelerated-domains: add chinastarlogistics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20456,6 +20456,7 @@ server=/chinasrif.com/114.114.114.114
 server=/chinassl.com/114.114.114.114
 server=/chinassl.net/114.114.114.114
 server=/chinasspp.com/114.114.114.114
+server=/chinastarlogistics.com/114.114.114.114
 server=/chinastationeryfair.com/114.114.114.114
 server=/chinasti.com/114.114.114.114
 server=/chinastoneforest.com/114.114.114.114
