--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69061,6 +69061,7 @@ server=/porlockz.com/114.114.114.114
 server=/porquesifiestas.com/114.114.114.114
 server=/portalcdn.cdnetworks.com/114.114.114.114
 server=/porthebei.com/114.114.114.114
+server=/portjswl.com/114.114.114.114
 server=/portlandgaa.com/114.114.114.114
 server=/ports-intl.com/114.114.114.114
 server=/portsgmt.com/114.114.114.114
