--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79784,6 +79784,7 @@ server=/stdicloud.com/114.114.114.114
 server=/stdlibrary.com/114.114.114.114
 server=/stdout.pub/114.114.114.114
 server=/stdwp.com/114.114.114.114
+server=/ste56.com/114.114.114.114
 server=/steambang.com/114.114.114.114
 server=/steambig.com/114.114.114.114
 server=/steamboxs.com/114.114.114.114
