accelerated-domains: add tf56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82765,6 +82765,7 @@ server=/tezhongzhuangbei.com/114.114.114.114
 server=/tezign.com/114.114.114.114
 server=/tf-bm.com/114.114.114.114
 server=/tf.wiki/114.114.114.114
+server=/tf56.com/114.114.114.114
 server=/tf86.com/114.114.114.114
 server=/tfauto.net/114.114.114.114
 server=/tfax.com/114.114.114.114
