--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85279,6 +85279,7 @@ server=/txcx.tech/114.114.114.114
 server=/txcxpt.com/114.114.114.114
 server=/txdai.com/114.114.114.114
 server=/txdzw.com/114.114.114.114
+server=/txfba.com/114.114.114.114
 server=/txfeiyu.com/114.114.114.114
 server=/txffp.com/114.114.114.114
 server=/txfund.com/114.114.114.114
