accelerated-domains: add uniswl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86084,6 +86084,7 @@ server=/unistc.com/114.114.114.114
 server=/unistrong.com/114.114.114.114
 server=/unistrument.com/114.114.114.114
 server=/uniswdc.com/114.114.114.114
+server=/uniswl.com/114.114.114.114
 server=/unitaxgd.com/114.114.114.114
 server=/unitconverter.cc/114.114.114.114
 server=/united-bearing.com/114.114.114.114
