--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87893,6 +87893,7 @@ server=/wanandroid.com/114.114.114.114
 server=/wananshan.com/114.114.114.114
 server=/wanbaapp.com/114.114.114.114
 server=/wanbaoju.com/114.114.114.114
+server=/wanbexpress.com/114.114.114.114
 server=/wanbiao800.com/114.114.114.114
 server=/wanbiaogs.com/114.114.114.114
 server=/wanbiaohao.com/114.114.114.114
