--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96730,6 +96730,7 @@ server=/yeaosound.com/114.114.114.114
 server=/yeapb.com/114.114.114.114
 server=/yeapcloud.com/114.114.114.114
 server=/yeapcloud.net/114.114.114.114
+server=/yearlygreen.com/114.114.114.114
 server=/yearnfar.com/114.114.114.114
 server=/yeastar.com/114.114.114.114
 server=/yeasturias.com/114.114.114.114
