accelerated-domains: add zhonggu56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102524,6 +102524,7 @@ server=/zhongfanxinrong.com/114.114.114.114
 server=/zhongfeiqiao.com/114.114.114.114
 server=/zhongfu.net/114.114.114.114
 server=/zhongfuwatch.com/114.114.114.114
+server=/zhonggu56.com/114.114.114.114
 server=/zhongguinong.com/114.114.114.114
 server=/zhongguobaiyin.com/114.114.114.114
 server=/zhongguociwang.com/114.114.114.114
