--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28771,6 +28771,7 @@ server=/e-buychina.com/114.114.114.114
 server=/e-byte.com/114.114.114.114
 server=/e-celap.com/114.114.114.114
 server=/e-chinalife.com/114.114.114.114
+server=/e-ciie.com/114.114.114.114
 server=/e-cloudstore.com/114.114.114.114
 server=/e-cookies.net/114.114.114.114
 server=/e-cspc.com/114.114.114.114
