--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11254,6 +11254,7 @@ server=/ankichina.net/114.114.114.114
 server=/ankio.net/114.114.114.114
 server=/ankki.com/114.114.114.114
 server=/ankuracorporate.com/114.114.114.114
+server=/anl-cn.com/114.114.114.114
 server=/anlai.com/114.114.114.114
 server=/anlaiye.com/114.114.114.114
 server=/anlewo.com/114.114.114.114
