--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18739,6 +18739,7 @@ server=/cells-net.com/114.114.114.114
 server=/cells-net.net/114.114.114.114
 server=/cellwise-semi.com/114.114.114.114
 server=/celwk.com/114.114.114.114
+server=/cemat-asia.com/114.114.114.114
 server=/cement365.com/114.114.114.114
 server=/cementren.com/114.114.114.114
 server=/cemho.com/114.114.114.114
