--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23367,6 +23367,7 @@ server=/cpsenglish.com/114.114.114.114
 server=/cpt-world.com/114.114.114.114
 server=/cpt123.com/114.114.114.114
 server=/cptae.com/114.114.114.114
+server=/cptc56.com/114.114.114.114
 server=/cptn.tv/114.114.114.114
 server=/cptv2018.com/114.114.114.114
 server=/cpu114.com/114.114.114.114
