accelerated-domains: add hengtonggf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41809,6 +41809,7 @@ server=/hengtaiboyuan.com/114.114.114.114
 server=/hengtiansoft.com/114.114.114.114
 server=/hengtianyun.com/114.114.114.114
 server=/hengtong-sd.com/114.114.114.114
+server=/hengtonggf.com/114.114.114.114
 server=/hengtonggroup.com/114.114.114.114
 server=/hengtongjuice-usa.com/114.114.114.114
 server=/hengtonglog.com/114.114.114.114
