accelerated-domains: add lesoon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56656,6 +56656,7 @@ server=/lesjulo.com/114.114.114.114
 server=/leslie-cheung.com/114.114.114.114
 server=/lesofn.com/114.114.114.114
 server=/lesonccl.com/114.114.114.114
+server=/lesoon.com/114.114.114.114
 server=/lesou.net/114.114.114.114
 server=/lespetitsfiguiers.com/114.114.114.114
 server=/lesports.com/114.114.114.114
