--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78031,6 +78031,7 @@ server=/sinostargroup.com/114.114.114.114
 server=/sinosteel.com/114.114.114.114
 server=/sinosun.com/114.114.114.114
 server=/sinosuntop.com/114.114.114.114
+server=/sinotechline.com/114.114.114.114
 server=/sinotf.com/114.114.114.114
 server=/sinotn.com/114.114.114.114
 server=/sinotone.net/114.114.114.114
