accelerated-domains: add zhilian-nb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102262,6 +102262,7 @@ server=/zhilehuo.com/114.114.114.114
 server=/zhileiqiye.com/114.114.114.114
 server=/zhileng.com/114.114.114.114
 server=/zhilepin.com/114.114.114.114
+server=/zhilian-nb.com/114.114.114.114
 server=/zhilian.com/114.114.114.114
 server=/zhilian.host/114.114.114.114
 server=/zhilianfm.com/114.114.114.114
