--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9375,6 +9375,7 @@ server=/ad518.com/114.114.114.114
 server=/ad7.com/114.114.114.114
 server=/ad778.com/114.114.114.114
 server=/ad9377.com/114.114.114.114
+server=/ada-post.com/114.114.114.114
 server=/adagaa.com/114.114.114.114
 server=/adamahf.com/114.114.114.114
 server=/adamcoder.com/114.114.114.114
