--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99831,6 +99831,7 @@ server=/yuncdn263.com/114.114.114.114
 server=/yuncdndun.com/114.114.114.114
 server=/yuncechina.com/114.114.114.114
 server=/yunceng.com/114.114.114.114
+server=/yunchelogistics.com/114.114.114.114
 server=/yuncheng.com/114.114.114.114
 server=/yunchengfang.com/114.114.114.114
 server=/yunchip.com/114.114.114.114
