accelerated-domains: add gzwlcyjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39690,6 +39690,7 @@ server=/gzwcjs.com/114.114.114.114
 server=/gzweicai.com/114.114.114.114
 server=/gzweix.com/114.114.114.114
 server=/gzwhir.com/114.114.114.114
+server=/gzwlcyjt.com/114.114.114.114
 server=/gzwonbo.com/114.114.114.114
 server=/gzwrit.com/114.114.114.114
 server=/gzwrjt.com/114.114.114.114
