--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24155,6 +24155,7 @@ server=/ctrlqq.com/114.114.114.114
 server=/ctrmi.com/114.114.114.114
 server=/ctsbw.com/114.114.114.114
 server=/ctsec.com/114.114.114.114
+server=/ctsfreight.com/114.114.114.114
 server=/ctsgx.com/114.114.114.114
 server=/ctsho.com/114.114.114.114
 server=/ctsitravel.com/114.114.114.114
