accelerated-domains: add gjkdwl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35034,6 +35034,7 @@ server=/gjjcxw.com/114.114.114.114
 server=/gjjiaxiao.com/114.114.114.114
 server=/gjjnhb.com/114.114.114.114
 server=/gjjsbz.com/114.114.114.114
+server=/gjkdwl.com/114.114.114.114
 server=/gjkkdashb4.fun/114.114.114.114
 server=/gjlease.com/114.114.114.114
 server=/gjmbwxpt.com/114.114.114.114
