accelerated-domains: add hbyt56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41153,6 +41153,7 @@ server=/hbyouyunyouke.com/114.114.114.114
 server=/hbyoyo.com/114.114.114.114
 server=/hbyscn.com/114.114.114.114
 server=/hbysfhm.com/114.114.114.114
+server=/hbyt56.com/114.114.114.114
 server=/hbyuandadl.com/114.114.114.114
 server=/hbyuanhao.com/114.114.114.114
 server=/hbyunxi.net/114.114.114.114
