accelerated-domains: add chinacrt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20041,6 +20041,7 @@ server=/chinacrankshaft.com/114.114.114.114
 server=/chinacreator.com/114.114.114.114
 server=/chinacrops.org/114.114.114.114
 server=/chinacrosspoint.com/114.114.114.114
+server=/chinacrt.com/114.114.114.114
 server=/chinacses.org/114.114.114.114
 server=/chinacsf.com/114.114.114.114
 server=/chinacsky.com/114.114.114.114
