--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43142,6 +43142,7 @@ server=/hnwd.com/114.114.114.114
 server=/hnwdhk.com/114.114.114.114
 server=/hnwisecom.com/114.114.114.114
 server=/hnwlcm.com/114.114.114.114
+server=/hnwlxh.com/114.114.114.114
 server=/hnwlxh.net/114.114.114.114
 server=/hnwlycg.com/114.114.114.114
 server=/hnwngp.com/114.114.114.114
