--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82807,6 +82807,7 @@ server=/tfogc.com/114.114.114.114
 server=/tfol.com/114.114.114.114
 server=/tfoyin.com/114.114.114.114
 server=/tfrl.net/114.114.114.114
+server=/tfs906.com/114.114.114.114
 server=/tfsino.com/114.114.114.114
 server=/tfsmy.com/114.114.114.114
 server=/tftplay.com/114.114.114.114
