accelerated-domains: add yb-able.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96472,6 +96472,7 @@ server=/yazhou-cy.com/114.114.114.114
 server=/yazhougoufang.com/114.114.114.114
 server=/yazuo.com/114.114.114.114
 server=/yazx.net/114.114.114.114
+server=/yb-able.com/114.114.114.114
 server=/yb1518.com/114.114.114.114
 server=/yb1867.com/114.114.114.114
 server=/yb3.cc/114.114.114.114
