accelerated-domains: add zjshwl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103691,6 +103691,7 @@ server=/zjshjkj.com/114.114.114.114
 server=/zjshuangtu.com/114.114.114.114
 server=/zjshuhao.com/114.114.114.114
 server=/zjshuo.com/114.114.114.114
+server=/zjshwl.com/114.114.114.114
 server=/zjsight.com/114.114.114.114
 server=/zjsjcjt.com/114.114.114.114
 server=/zjsjky.com/114.114.114.114
