--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30075,6 +30075,7 @@ server=/eplove.com/114.114.114.114
 server=/epluspvy.com/114.114.114.114
 server=/epoch168.com/114.114.114.114
 server=/epoos.com/114.114.114.114
+server=/eportyun.com/114.114.114.114
 server=/eprcw.com/114.114.114.114
 server=/eprezi.com/114.114.114.114
 server=/epsea.com/114.114.114.114
