--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34960,6 +34960,7 @@ server=/gimcyun.com/114.114.114.114
 server=/gimhoy.com/114.114.114.114
 server=/gimmgimm.com/114.114.114.114
 server=/gimoo.net/114.114.114.114
+server=/ginfon.com/114.114.114.114
 server=/gingerbreadstudio.cc/114.114.114.114
 server=/gingyan.com/114.114.114.114
 server=/ginihbg.com/114.114.114.114
