--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58310,6 +58310,7 @@ server=/logowk.com/114.114.114.114
 server=/logozhan.com/114.114.114.114
 server=/logozhizuowang.com/114.114.114.114
 server=/logwing.com/114.114.114.114
+server=/logwirecloud.com/114.114.114.114
 server=/lohaa.com/114.114.114.114
 server=/lohalink.com/114.114.114.114
 server=/lohand.com/114.114.114.114
