accelerated-domains: add xjsmwl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94190,6 +94190,7 @@ server=/xjrdsp.com/114.114.114.114
 server=/xjrmyy.com/114.114.114.114
 server=/xjshift.com/114.114.114.114
 server=/xjsic.com/114.114.114.114
+server=/xjsmwl.com/114.114.114.114
 server=/xjsy56.com/114.114.114.114
 server=/xjtcm.com/114.114.114.114
 server=/xjtjjt.com/114.114.114.114
