--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88435,6 +88435,7 @@ server=/wbstar.com/114.114.114.114
 server=/wbsz.com/114.114.114.114
 server=/wbt5.com/114.114.114.114
 server=/wbtech.com/114.114.114.114
+server=/wbtrans.com/114.114.114.114
 server=/wbw.im/114.114.114.114
 server=/wbxinxi.com/114.114.114.114
 server=/wc-soft.com/114.114.114.114
