--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74129,6 +74129,7 @@ server=/saleenauto.com/114.114.114.114
 server=/saleforin.com/114.114.114.114
 server=/salesdish.com/114.114.114.114
 server=/salesman-bd.com/114.114.114.114
+server=/salg-sichuanair.com/114.114.114.114
 server=/salogs.com/114.114.114.114
 server=/salonglong.com/114.114.114.114
 server=/salongweb.com/114.114.114.114
