--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5807,6 +5807,7 @@ server=/56bid.com/114.114.114.114
 server=/56c.co/114.114.114.114
 server=/56care.com/114.114.114.114
 server=/56che.com/114.114.114.114
+server=/56cheng.vip/114.114.114.114
 server=/56china.com/114.114.114.114
 server=/56clte.org/114.114.114.114
 server=/56dagong.com/114.114.114.114
