accelerated-domains: add vnlin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87343,6 +87343,7 @@ server=/vnanke.com/114.114.114.114
 server=/vndian.com/114.114.114.114
 server=/vnet.com/114.114.114.114
 server=/vnet.mobi/114.114.114.114
+server=/vnlin.com/114.114.114.114
 server=/vnnox.com/114.114.114.114
 server=/vnpy.com/114.114.114.114
 server=/vns1.net/114.114.114.114
