accelerated-domains: add qdzhv.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70052,6 +70052,7 @@ server=/qdyxbyy.com/114.114.114.114
 server=/qdyztang.com/114.114.114.114
 server=/qdzhengkang.com/114.114.114.114
 server=/qdzhongli.com/114.114.114.114
+server=/qdzhv.com/114.114.114.114
 server=/qdzixu.com/114.114.114.114
 server=/qdzkmj.com/114.114.114.114
 server=/qdzls.com/114.114.114.114
