--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89953,6 +89953,7 @@ server=/winbywin.com/114.114.114.114
 server=/wincheers.com/114.114.114.114
 server=/wincheers.net/114.114.114.114
 server=/wincn.com/114.114.114.114
+server=/wincologistics.com/114.114.114.114
 server=/wincome.group/114.114.114.114
 server=/wincomn.com/114.114.114.114
 server=/wincoprint.net/114.114.114.114
