--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21456,6 +21456,7 @@ server=/ckan.tv/114.114.114.114
 server=/ckd-mbd.com/114.114.114.114
 server=/ckd.im/114.114.114.114
 server=/ckd.so/114.114.114.114
+server=/ckd8.com/114.114.114.114
 server=/ckdzb.com/114.114.114.114
 server=/ckefu.com/114.114.114.114
 server=/ckernel.org/114.114.114.114
