accelerated-domains: add ecnpl.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29206,6 +29206,7 @@ server=/ecmagnet.com/114.114.114.114
 server=/ecmc-nj.com/114.114.114.114
 server=/ecmoban.com/114.114.114.114
 server=/ecmould.com/114.114.114.114
+server=/ecnpl.net/114.114.114.114
 server=/ecnu.net/114.114.114.114
 server=/ecnuas.com/114.114.114.114
 server=/ecnudec.com/114.114.114.114
