--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43445,6 +43445,7 @@ server=/hongteng.xyz/114.114.114.114
 server=/hongttel.com/114.114.114.114
 server=/hongtu-xinghan.com/114.114.114.114
 server=/hongtu.net/114.114.114.114
+server=/hongtu56.com/114.114.114.114
 server=/hongtucad.com/114.114.114.114
 server=/hongvv.com/114.114.114.114
 server=/hongwenfeh.com/114.114.114.114
