--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86142,6 +86142,7 @@ server=/unixhot.com/114.114.114.114
 server=/unixidc.com/114.114.114.114
 server=/unjmz.com/114.114.114.114
 server=/unjs.com/114.114.114.114
+server=/unlcn.com/114.114.114.114
 server=/unlimax.com/114.114.114.114
 server=/unlimithealth.com/114.114.114.114
 server=/unlitui.com/114.114.114.114
