--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23668,6 +23668,7 @@ server=/cr175.com/114.114.114.114
 server=/cr18g.com/114.114.114.114
 server=/cr19gj.com/114.114.114.114
 server=/cr6868.com/114.114.114.114
+server=/cr8gc.com/114.114.114.114
 server=/crabchina.com/114.114.114.114
 server=/craer.com/114.114.114.114
 server=/craftcontact.com/114.114.114.114
