accelerated-domains: add wlhcc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90259,6 +90259,7 @@ server=/wlgkk.com/114.114.114.114
 server=/wlgooo.com/114.114.114.114
 server=/wlgou.com/114.114.114.114
 server=/wlgxf.com/114.114.114.114
+server=/wlhcc.com/114.114.114.114
 server=/wlhyjx.com/114.114.114.114
 server=/wlhyxh.com/114.114.114.114
 server=/wlinfor.com/114.114.114.114
