--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98459,6 +98459,7 @@ server=/ynyp.com/114.114.114.114
 server=/ynytjz.com/114.114.114.114
 server=/ynytkc.com/114.114.114.114
 server=/ynyxms.com/114.114.114.114
+server=/ynzcwl.com/114.114.114.114
 server=/ynzg.org/114.114.114.114
 server=/ynzhby.com/114.114.114.114
 server=/ynzp.com/114.114.114.114
