accelerated-domains: add buffaloex.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16686,6 +16686,7 @@ server=/buduanwang.vip/114.114.114.114
 server=/buduobaobao.com/114.114.114.114
 server=/bueryx.com/114.114.114.114
 server=/buff8.com/114.114.114.114
+server=/buffaloex.com/114.114.114.114
 server=/buffst.com/114.114.114.114
 server=/bughz.com/114.114.114.114
 server=/bugku.com/114.114.114.114
