accelerated-domains: add etransfar.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30377,6 +30377,7 @@ server=/etrack05.com/114.114.114.114
 server=/etrack07.com/114.114.114.114
 server=/etrack08.com/114.114.114.114
 server=/etradegx.com/114.114.114.114
+server=/etransfar.com/114.114.114.114
 server=/etranshare.com/114.114.114.114
 server=/etrasemi.com/114.114.114.114
 server=/etrd.org/114.114.114.114
