--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49504,6 +49504,7 @@ server=/jesiro.com/114.114.114.114
 server=/jesselauristonlivermore.com/114.114.114.114
 server=/jesselivermore.com/114.114.114.114
 server=/jestq.com/114.114.114.114
+server=/jet-logistics.com/114.114.114.114
 server=/jet-ok.com/114.114.114.114
 server=/jetechtool.com/114.114.114.114
 server=/jethoo.com/114.114.114.114
