accelerated-domains: add zhongzhen56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102745,6 +102745,7 @@ server=/zhongyuyx.com/114.114.114.114
 server=/zhongzaisheng.net/114.114.114.114
 server=/zhongzhaizs.com/114.114.114.114
 server=/zhongzhao.com/114.114.114.114
+server=/zhongzhen56.com/114.114.114.114
 server=/zhongzhenjiaoyu.com/114.114.114.114
 server=/zhongzhensen.com/114.114.114.114
 server=/zhongzhi-faqian.com/114.114.114.114
