--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49889,6 +49889,7 @@ server=/jiangweishan.com/114.114.114.114
 server=/jiangxing.live/114.114.114.114
 server=/jiangxiol.com/114.114.114.114
 server=/jiangxiwater.com/114.114.114.114
+server=/jiangxiwuliu.com/114.114.114.114
 server=/jiangxueqiao.com/114.114.114.114
 server=/jiangyan.tv/114.114.114.114
 server=/jiangyoushang.com/114.114.114.114
