--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76552,6 +76552,7 @@ server=/shggzy.com/114.114.114.114
 server=/shgjj.com/114.114.114.114
 server=/shgjq.com/114.114.114.114
 server=/shgkh.com/114.114.114.114
+server=/shgkl.com/114.114.114.114
 server=/shgkw.org/114.114.114.114
 server=/shglgf.com/114.114.114.114
 server=/shgsec.com/114.114.114.114
