accelerated-domains: add 56linked.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5824,6 +5824,7 @@ server=/56jg.com/114.114.114.114
 server=/56join.com/114.114.114.114
 server=/56kad.com/114.114.114.114
 server=/56laile.com/114.114.114.114
+server=/56linked.com/114.114.114.114
 server=/56md.com/114.114.114.114
 server=/56ml.com/114.114.114.114
 server=/56mp.com/114.114.114.114
