--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25635,6 +25635,7 @@ server=/ddcdn.com/114.114.114.114
 server=/ddcheshi.com/114.114.114.114
 server=/ddcits.com/114.114.114.114
 server=/ddcsjw.com/114.114.114.114
+server=/ddcwl.com/114.114.114.114
 server=/ddd-china.com/114.114.114.114
 server=/dddazhe.com/114.114.114.114
 server=/ddddns.net/114.114.114.114
