--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58297,6 +58297,7 @@ server=/logi100.com/114.114.114.114
 server=/logicdsp.com/114.114.114.114
 server=/login.cdnetworks.com/114.114.114.114
 server=/logiseasy.com/114.114.114.114
+server=/logisteed-sc.com/114.114.114.114
 server=/logisticstech.com/114.114.114.114
 server=/logo-emblem.com/114.114.114.114
 server=/logo123.com/114.114.114.114
