--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96992,6 +96992,7 @@ server=/yffy120.com/114.114.114.114
 server=/yffzkl.com/114.114.114.114
 server=/yfgdled.com/114.114.114.114
 server=/yfgj68.com/114.114.114.114
+server=/yfhex.com/114.114.114.114
 server=/yfhhf.com/114.114.114.114
 server=/yfhl.net/114.114.114.114
 server=/yfhtbdn.com/114.114.114.114
