--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104583,6 +104583,7 @@ server=/ztno.com/114.114.114.114
 server=/ztny188.com/114.114.114.114
 server=/zto.com/114.114.114.114
 server=/zto56.com/114.114.114.114
+server=/ztoglobal.com/114.114.114.114
 server=/ztomember.com/114.114.114.114
 server=/ztqft.com/114.114.114.114
 server=/ztqqt.com/114.114.114.114
