--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11487,6 +11487,7 @@ server=/aodabo.tech/114.114.114.114
 server=/aodaliyaqianzheng.com/114.114.114.114
 server=/aodbw.com/114.114.114.114
 server=/aoddoll.com/114.114.114.114
+server=/aodeline.com/114.114.114.114
 server=/aodeng.cc/114.114.114.114
 server=/aodianyun.com/114.114.114.114
 server=/aodingsy.com/114.114.114.114
