accelerated-domains: add jlty56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51394,6 +51394,7 @@ server=/jlszlyy.com/114.114.114.114
 server=/jlszykj.com/114.114.114.114
 server=/jltchina.com/114.114.114.114
 server=/jltrq.com/114.114.114.114
+server=/jlty56.com/114.114.114.114
 server=/jltyjxzz.com/114.114.114.114
 server=/jlwater.com/114.114.114.114
 server=/jlwlw.com/114.114.114.114
