accelerated-domains: add lekuya.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56543,6 +56543,7 @@ server=/lekazc.com/114.114.114.114
 server=/lekevr.com/114.114.114.114
 server=/lekoukou.com/114.114.114.114
 server=/lektec.com/114.114.114.114
+server=/lekuya.com/114.114.114.114
 server=/lelaer.com/114.114.114.114
 server=/lelai.com/114.114.114.114
 server=/lelbzwa.com/114.114.114.114
