--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69380,6 +69380,7 @@ server=/projectaker.com/114.114.114.114
 server=/projector-jl.com/114.114.114.114
 server=/projector-window.com/114.114.114.114
 server=/projektenergetika.com/114.114.114.114
+server=/prolog-int.com/114.114.114.114
 server=/prolto.com/114.114.114.114
 server=/promise-sz.com/114.114.114.114
 server=/promisingedu.com/114.114.114.114
