--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70683,6 +70683,7 @@ server=/qingcongxiaoyuan.com/114.114.114.114
 server=/qingcty.com/114.114.114.114
 server=/qingdan.com/114.114.114.114
 server=/qingdao-port.com/114.114.114.114
+server=/qingdao-port.net/114.114.114.114
 server=/qingdaochina.org/114.114.114.114
 server=/qingdaogxt.com/114.114.114.114
 server=/qingdaokohap.com/114.114.114.114
