accelerated-domains: add transfarzl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84487,6 +84487,7 @@ server=/trans4e.com/114.114.114.114
 server=/transduck.com/114.114.114.114
 server=/transer-cn.com/114.114.114.114
 server=/transfarchem.com/114.114.114.114
+server=/transfarzl.com/114.114.114.114
 server=/transformer-cn.com/114.114.114.114
 server=/transformers.run/114.114.114.114
 server=/transfriend.com/114.114.114.114
