accelerated-domains: add yunchexing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99876,6 +99876,7 @@ server=/yunceng.com/114.114.114.114
 server=/yunchelogistics.com/114.114.114.114
 server=/yuncheng.com/114.114.114.114
 server=/yunchengfang.com/114.114.114.114
+server=/yunchexing.com/114.114.114.114
 server=/yunchip.com/114.114.114.114
 server=/yunchonglife.com/114.114.114.114
 server=/yunchongmob.com/114.114.114.114
