--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85417,6 +85417,7 @@ server=/tyhjzx.com/114.114.114.114
 server=/tyi365.com/114.114.114.114
 server=/tyihome.com/114.114.114.114
 server=/tyjnkj.com/114.114.114.114
+server=/tykd.com/114.114.114.114
 server=/tyksl.com/114.114.114.114
 server=/tylls.com/114.114.114.114
 server=/tymcdn.com/114.114.114.114
