accelerated-domains: add ysczw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99266,6 +99266,7 @@ server=/ysch.cc/114.114.114.114
 server=/yschn.com/114.114.114.114
 server=/yscq.com/114.114.114.114
 server=/yscro.com/114.114.114.114
+server=/ysczw.com/114.114.114.114
 server=/ysdq8.com/114.114.114.114
 server=/ysdui.com/114.114.114.114
 server=/ysedu.com/114.114.114.114
