accelerated-domains: add bluebullcn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15845,6 +15845,7 @@ server=/bluearchive-cn.com/114.114.114.114
 server=/bluebeebox.com/114.114.114.114
 server=/bluebellls.com/114.114.114.114
 server=/bluebirdme.com/114.114.114.114
+server=/bluebullcn.com/114.114.114.114
 server=/bluecatyun.com/114.114.114.114
 server=/bluecefa.com/114.114.114.114
 server=/bluecloudprod.com/114.114.114.114
