accelerated-domains: add hebeiwl.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41488,6 +41488,7 @@ server=/hebeinongzi.com/114.114.114.114
 server=/hebeinongzi.net/114.114.114.114
 server=/hebeisaixin.com/114.114.114.114
 server=/hebeishuangning.com/114.114.114.114
+server=/hebeiwl.net/114.114.114.114
 server=/hebeiwulian.com/114.114.114.114
 server=/hebeiyouxi.com/114.114.114.114
 server=/hebeizuqiu.net/114.114.114.114
