accelerated-domains: add nfwl168.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64544,6 +64544,7 @@ server=/nfnews.com/114.114.114.114
 server=/nfpeople.com/114.114.114.114
 server=/nfs-china.com/114.114.114.114
 server=/nfschina.com/114.114.114.114
+server=/nfwl168.com/114.114.114.114
 server=/nfxsy.com/114.114.114.114
 server=/nfyeya.com/114.114.114.114
 server=/nfyny.com/114.114.114.114
