--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23252,6 +23252,7 @@ server=/cos-show.com/114.114.114.114
 server=/cos126.com/114.114.114.114
 server=/cosbuluo.com/114.114.114.114
 server=/coschat.com/114.114.114.114
+server=/cosco-logisticsqd.com/114.114.114.114
 server=/cosco.com/114.114.114.114
 server=/coscon.com/114.114.114.114
 server=/coscoshipping.com/114.114.114.114
