accelerated-domains: add nf56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64530,6 +64530,7 @@ server=/neyuan.com/114.114.114.114
 server=/neznanskyphoto.com/114.114.114.114
 server=/nf.video/114.114.114.114
 server=/nf108.com/114.114.114.114
+server=/nf56.com/114.114.114.114
 server=/nfc315.com/114.114.114.114
 server=/nfchaiqian.com/114.114.114.114
 server=/nfcic.com/114.114.114.114
