--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73566,6 +73566,7 @@ server=/rshf88.com/114.114.114.114
 server=/rshjgc.com/114.114.114.114
 server=/rsjytx.com/114.114.114.114
 server=/rskjx.com/114.114.114.114
+server=/rslg-china.com/114.114.114.114
 server=/rslicai.com/114.114.114.114
 server=/rsm.download.prss.microsoft.com/114.114.114.114
 server=/rsnschina.com/114.114.114.114
