--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73806,6 +73806,7 @@ server=/rundefit.com/114.114.114.114
 server=/rundejy.com/114.114.114.114
 server=/runergy.com/114.114.114.114
 server=/runff.com/114.114.114.114
+server=/runforint.com/114.114.114.114
 server=/runfox.com/114.114.114.114
 server=/runfujin.com/114.114.114.114
 server=/rungonghui.com/114.114.114.114
