accelerated-domains: add cargodiscovery.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17726,6 +17726,7 @@ server=/carezb.com/114.114.114.114
 server=/cargai.com/114.114.114.114
 server=/cargeer.com/114.114.114.114
 server=/cargo001.com/114.114.114.114
+server=/cargodiscovery.com/114.114.114.114
 server=/cargosmart.com/114.114.114.114
 server=/caribgalaxy.com/114.114.114.114
 server=/carimg.com/114.114.114.114
