--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44552,6 +44552,7 @@ server=/huategas.com/114.114.114.114
 server=/huatengsci.com/114.114.114.114
 server=/huati.cc/114.114.114.114
 server=/huatianxiangsu.com/114.114.114.114
+server=/huatong-logistics.com/114.114.114.114
 server=/huatu.com/114.114.114.114
 server=/huatugz.com/114.114.114.114
 server=/huatuo007.com/114.114.114.114
