--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67538,6 +67538,7 @@ server=/oxygenos.com/114.114.114.114
 server=/oxyry.com/114.114.114.114
 server=/oyalee.com/114.114.114.114
 server=/oyewifi.com/114.114.114.114
+server=/oym56lm.com/114.114.114.114
 server=/oyohyee.com/114.114.114.114
 server=/oyonyou.com/114.114.114.114
 server=/oyoozo.com/114.114.114.114
