accelerated-domains: add wuyougroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91327,6 +91327,7 @@ server=/wuyongwang.com/114.114.114.114
 server=/wuyou.com/114.114.114.114
 server=/wuyou.net/114.114.114.114
 server=/wuyoufang.com/114.114.114.114
+server=/wuyougroup.com/114.114.114.114
 server=/wuyoujianding.com/114.114.114.114
 server=/wuyoushow.com/114.114.114.114
 server=/wuyousy.com/114.114.114.114
