accelerated-domains: add kwt56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55379,6 +55379,7 @@ server=/kwkf.com/114.114.114.114
 server=/kwmachineworks.com/114.114.114.114
 server=/kwong-tech.com/114.114.114.114
 server=/kws123.com/114.114.114.114
+server=/kwt56.com/114.114.114.114
 server=/kwtgs.com/114.114.114.114
 server=/kwtzn.com/114.114.114.114
 server=/kwudor.com/114.114.114.114
