accelerated-domains: add maxway-logistics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60542,6 +60542,7 @@ server=/maxscend.com/114.114.114.114
 server=/maxtop.online/114.114.114.114
 server=/maxuscloud.com/114.114.114.114
 server=/maxviewrealty.com/114.114.114.114
+server=/maxway-logistics.com/114.114.114.114
 server=/maxwealthfund.com/114.114.114.114
 server=/maxwi.com/114.114.114.114
 server=/maxxipoint.com/114.114.114.114
