--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87835,6 +87835,7 @@ server=/wacdn.com/114.114.114.114
 server=/wader1714.com/114.114.114.114
 server=/wadkj.com/114.114.114.114
 server=/waduanzi.com/114.114.114.114
+server=/wae-logistics.com/114.114.114.114
 server=/waerfa.com/114.114.114.114
 server=/waf-website.com/114.114.114.114
 server=/waf.cdnetworks.com/114.114.114.114
