--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99911,6 +99911,7 @@ server=/yunda56.com/114.114.114.114
 server=/yundaex.com/114.114.114.114
 server=/yundagongyi.com/114.114.114.114
 server=/yundangan.com/114.114.114.114
+server=/yundangnet.com/114.114.114.114
 server=/yundaomen.com/114.114.114.114
 server=/yundaowx.com/114.114.114.114
 server=/yundasys.com/114.114.114.114
