accelerated-domains: add huisenky.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44919,6 +44919,7 @@ server=/huiruanzhuang.com/114.114.114.114
 server=/huirui-tech.com/114.114.114.114
 server=/huirui1688.com/114.114.114.114
 server=/huisem.com/114.114.114.114
+server=/huisenky.com/114.114.114.114
 server=/huishangbao.com/114.114.114.114
 server=/huishangol.com/114.114.114.114
 server=/huishengaudio.com/114.114.114.114
