accelerated-domains: add justar-cn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52704,6 +52704,7 @@ server=/just4coding.com/114.114.114.114
 server=/just4fun.site/114.114.114.114
 server=/just998.com/114.114.114.114
 server=/justalkcloud.com/114.114.114.114
+server=/justar-cn.com/114.114.114.114
 server=/justbbs0.com/114.114.114.114
 server=/justbilt.com/114.114.114.114
 server=/justbon.com/114.114.114.114
