accelerated-domains: add sh-sgl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75740,6 +75740,7 @@ server=/sh-ryjx.com/114.114.114.114
 server=/sh-sed.com/114.114.114.114
 server=/sh-service.com/114.114.114.114
 server=/sh-sfc.com/114.114.114.114
+server=/sh-sgl.com/114.114.114.114
 server=/sh-shenming.com/114.114.114.114
 server=/sh-shenou.com/114.114.114.114
 server=/sh-shuguang.com/114.114.114.114
