accelerated-domains: add t-ocean.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81726,6 +81726,7 @@ server=/t-dsyy.com/114.114.114.114
 server=/t-firefly.com/114.114.114.114
 server=/t-gafa.com/114.114.114.114
 server=/t-io.org/114.114.114.114
+server=/t-ocean.com/114.114.114.114
 server=/t-t.live/114.114.114.114
 server=/t-v.com/114.114.114.114
 server=/t.biz/114.114.114.114
