accelerated-domains: add tongzecn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84100,6 +84100,7 @@ server=/tongyuan.cc/114.114.114.114
 server=/tongyuanos.com/114.114.114.114
 server=/tongyue.com/114.114.114.114
 server=/tongyuheavy.com/114.114.114.114
+server=/tongzecn.com/114.114.114.114
 server=/tongzhuo100.com/114.114.114.114
 server=/tongzhuodn.com/114.114.114.114
 server=/tongzicha.com/114.114.114.114
