--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58302,6 +58302,7 @@ server=/loftcn.com/114.114.114.114
 server=/lofter.com/114.114.114.114
 server=/loftshine.com/114.114.114.114
 server=/lofu.net/114.114.114.114
+server=/log-research.com/114.114.114.114
 server=/logacg.com/114.114.114.114
 server=/logclub.com/114.114.114.114
 server=/loghao.com/114.114.114.114
