accelerated-domains: add luhuiwl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58988,6 +58988,7 @@ server=/luhu.co/114.114.114.114
 server=/luhua.cc/114.114.114.114
 server=/luhuadong.com/114.114.114.114
 server=/luhuaseed.com/114.114.114.114
+server=/luhuiwl.com/114.114.114.114
 server=/lujiaming.com/114.114.114.114
 server=/lujiandairy.com/114.114.114.114
 server=/lujianxin.com/114.114.114.114
