accelerated-domains: add saimoliku.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74134,6 +74134,7 @@ server=/sailungroup.com/114.114.114.114
 server=/sailuntire.com/114.114.114.114
 server=/sailway-china.com/114.114.114.114
 server=/saimogroup.com/114.114.114.114
+server=/saimoliku.com/114.114.114.114
 server=/sainacoffee.com/114.114.114.114
 server=/saintcos.hk/114.114.114.114
 server=/saintgreenchem.com/114.114.114.114
