accelerated-domains: add qimingjiang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70655,6 +70655,7 @@ server=/qimiaozhiwu.com/114.114.114.114
 server=/qiming.tech/114.114.114.114
 server=/qimingcx.com/114.114.114.114
 server=/qimingdao.com/114.114.114.114
+server=/qimingjiang.com/114.114.114.114
 server=/qimingpian.com/114.114.114.114
 server=/qimingvc.com/114.114.114.114
 server=/qimingventures.com/114.114.114.114
