accelerated-domains: add glaproject.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35155,6 +35155,7 @@ server=/glamourtrains.com/114.114.114.114
 server=/glandpackingindia.com/114.114.114.114
 server=/glanimaltrade.com/114.114.114.114
 server=/glanu.com/114.114.114.114
+server=/glaproject.com/114.114.114.114
 server=/glasercom.com/114.114.114.114
 server=/glass-ciac.com/114.114.114.114
 server=/glassbottleproducer.com/114.114.114.114
