accelerated-domains: add yabyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96145,6 +96145,7 @@ server=/yabo.com/114.114.114.114
 server=/yabo2025.com/114.114.114.114
 server=/yabolive.com/114.114.114.114
 server=/yaboshi0777.com/114.114.114.114
+server=/yabyy.com/114.114.114.114
 server=/yac8.com/114.114.114.114
 server=/yac8.net/114.114.114.114
 server=/yace17.com/114.114.114.114
