accelerated-domains: add sxjg-wl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80757,6 +80757,7 @@ server=/sxjd-cn.com/114.114.114.114
 server=/sxjdfreight.com/114.114.114.114
 server=/sxjdpm.com/114.114.114.114
 server=/sxjf8789.com/114.114.114.114
+server=/sxjg-wl.com/114.114.114.114
 server=/sxjh88.com/114.114.114.114
 server=/sxjhzsgc.com/114.114.114.114
 server=/sxjinfengjiuye.com/114.114.114.114
