accelerated-domains: add anjilog.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11237,6 +11237,7 @@ server=/anjianghu.net/114.114.114.114
 server=/anjiangshi.com/114.114.114.114
 server=/anjiechem.com/114.114.114.114
 server=/anjiecorp.com/114.114.114.114
+server=/anjilog.com/114.114.114.114
 server=/anjimicro.com/114.114.114.114
 server=/anjismart.com/114.114.114.114
 server=/anjixue.com/114.114.114.114
