accelerated-domains: add eshine-logistics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30250,6 +30250,7 @@ server=/eshare.cc/114.114.114.114
 server=/esheep.com/114.114.114.114
 server=/eshenlin.com/114.114.114.114
 server=/eshimin.com/114.114.114.114
+server=/eshine-logistics.com/114.114.114.114
 server=/eshiyun.info/114.114.114.114
 server=/eshop-switch.com/114.114.114.114
 server=/eshopb2c.com/114.114.114.114
